Submissão de Propostas com e-mail

--- a/projetos/templates/projetos/meuprojeto_aluno.html
+++ b/projetos/templates/projetos/meuprojeto_aluno.html
@@ -38,6 +38,8 @@
           <strong>Áreas da engenharia envolvidas no projeto (habilidade necessárias):</strong> {{ alocado.projeto.areas|linebreaks }}<br>
         {% endcomment %}
         <strong>Recursos a serem disponibilizados aos Alunos :</strong> {{ alocado.projeto.proposta.recursos|linebreaks }}<br>
+        <strong>Outras observações :</strong> {{ alocado.projeto.proposta.observacoes|linebreaks }}<br>
+
         <hr>
 
         <h3>Empresa: {{ alocado.projeto.empresa.nome_empresa }}</h3>
