--- a/projetos/templates/generic.html
+++ b/projetos/templates/generic.html
@@ -8,7 +8,7 @@
 {% block head %}{% endblock %}
 
 {% block content %}
-    {{mensagem}}
+    {{mensagem|safe}}
     <br>
     {% if area_aluno %}
         <a href="{% url 'index_aluno' %}">Voltar para Área do Aluno</a><br>
