--- a/users/templates/users/aluno_detail.html
+++ b/users/templates/users/aluno_detail.html
@@ -12,6 +12,9 @@
 {% block content %}
   <h3>{{aluno.user.get_full_name}}</h3>
   <strong>e-mail:</strong> <a href="mailto:{{aluno.user.email}}"> &lt;{{aluno.user.email}}&gt;</a><br>
+  {% if aluno.user.linkedin %}
+    <strong>LinkedIn:</strong> <a href="{{aluno.user.linkedin}}">{{aluno.user.linkedin}}</a><br>
+  {% endif %}
   {% if aluno.matricula %}
     <strong>Matrícula:</strong> {{aluno.matricula}}<br>
   {% endif %}
