abre LinkedIn em nova tab

--- a/users/templates/users/parceiro_detail.html
+++ b/users/templates/users/parceiro_detail.html
@@ -32,7 +32,7 @@
       <strong>Cargo:</strong> {{parceiro.cargo}}<br>
   {% endif %}
   {% if parceiro.user.linkedin %}
-    <strong>LinkedIn:</strong> <a href="{{parceiro.user.linkedin}}">{{parceiro.user.linkedin}}</a><br>
+    <strong>LinkedIn:</strong> <a href="{{parceiro.user.linkedin}}" target="_blank">{{parceiro.user.linkedin}}</a><br>
   {% endif %}
   <strong>e-mail:</strong> <a href="mailto:{{parceiro.user.email}}"> &lt;{{parceiro.user.email}}&gt;</a><br>
   &nbsp;
