--- a/users/templates/users/professor_detail.html
+++ b/users/templates/users/professor_detail.html
@@ -18,7 +18,7 @@
     <strong>Lattes:</strong> <a href="{{ professor.lattes }}"> {{ professor.lattes }} </a><br>
   {% endif %}
   {% if professor.user.linkedin %}
-    <strong>LinkedIn:</strong> <a href="{{professor.user.linkedin}}">{{professor.user.linkedin}}</a><br>
+    <strong>LinkedIn:</strong> <a href="{{professor.user.linkedin}}" target="_blank">{{professor.user.linkedin}}</a><br>
   {% endif %}
   <strong>e-mail:</strong> <a href="mailto:{{professor.user.email}}"> &lt;{{professor.user.email}}&gt;</a><br>
   {% if professor.website %}
